--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,14 @@
-ul {
-    padding: 10px 0;
-    list-style-type: none;
-}
-
 .app {
     padding: 15px 50px;
 }
 
-.todolists-container {
-    display: flex;
-    flex-wrap: wrap;
+.app__todolist-creation {
+    margin-bottom: 70px;
 }
 
-.todo-list-creation {
-    margin-bottom: 70px;
+.app__todolists-container {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .todolist {
@@ -27,60 +22,24 @@ ul {
     margin: 0;
 }
 
-li {
+.todolist__task-list {
+    padding: 10px 0;
+    list-style-type: none;
+}
+
+.task {
     display: flex;
     align-items: flex-start;
 }
 
-.task-title-container {
+.task_status-is-done {
+    filter: opacity(50%);
+}
+
+.editable-span {
     align-self: center;
 }
 
-.btn {
-    width: 18px;
-    height: 18px;
-    background: white no-repeat center;
-
-    border: none;
-    cursor: pointer;
-}
-
-.remove-btn {
-    background-image: url(../public/delete-bin_icon.png);
-}
-
-.add-btn {
-    width: auto;
-    border: 1px solid black;
-
-    /* background-image: url(../public/add_icon.png); */
-}
-
-.filter-btn {
-    background: white no-repeat center;
-    border: 1px solid black;
-    cursor: pointer;
-}
-
-.filter-btn:not(:last-child) {
-    border-right: none;
-}
-
-.error {
-    border: 1px solid brown;
-}
-
-.error-message {
-    color: brown;
-}
-
-.active-filter {
-    background-color: #7ebbff;
-}
-
-.task__status_is-done {
-    filter: opacity(50%);
-}
 
 .item-form button {
     margin-left: 10px;
